# tj-scraper

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  pyproject.toml  readme.md  tasks.py  tj_scraper.py
.github/workflows/: full-check.yml
samples/: processo-1.html
tests/: __init__.py  conftest.py  fixtures.py  helpers.py  mock.py  test_cache.py  test_download.py  test_html_extraction.py  test_process.py  test_tj_scraper.py  test_url.py  test_webapp.py
tj_scraper/: __init__.py  __main__.py  cache.py  cli.py  download.py  errors.py  export.py  html.py  process.py  statistics.py  timing.py  tj_info.toml  url.py  webapp.py
tj_scraper/templates/: mainpage.html
