[tool.poetry]
name = "tj-scraper"
version = "0.1.0"
description = ""
authors = ["João Paulo Taylor Ienczak Zanette <jpaulotiz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.4.1"
importlib-metadata = "^4.0.1"
jsonlines = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.7.2"
flake8 = "^3.8.4"
pre-commit = "^2.14.0"
mypy = "^0.910"
black = "^21.9b0"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
