[tool.poetry]
name = "tj-scraper"
version = "0.1.0"
description = ""
authors = ["João Paulo Taylor Ienczak Zanette <jpaulotiz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.4.1"
importlib-metadata = "^4.0.1"
jsonlines = "^2.0.0"
requests = "^2.26.0"
aiohttp = "^3.8.0"
openpyxl = "^3.0.9"
typer = "^0.4.0"
toml = "^0.10.2"
Flask = {version = "^2.0.2", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pylint = "^2.7.2"
flake8 = "^3.8.4"
pre-commit = "^2.14.0"
mypy = "^0.942"
black = "21.12b0"
types-requests = "^2.25.11"
aioresponses = "^0.7.3"
types-toml = "^0.10.4"

[tool.poetry.extras]
webapp = ["flask"]

[tool.mypy]
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "import-outside-toplevel",
    "line-too-long",
    "duplicate-code",
]

[tool.pylint.typecheck]
ignored-classes = [
    "Reader",
    "Writer",
]

[tool.pycodestyle]
max-line-length = 88

[tool.pyright]
ignore = ["tj_scraper/cli.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
